--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-header>
       <ion-toolbar  color="favorite">
         <ion-title class="title">
-          Menu
+          <b>Menu</b>
         </ion-title>
       </ion-toolbar>
     </ion-header>
@@ -13,7 +13,7 @@
         <ion-item routerLink="/login">
           <ion-icon  name="mail" slot="start">   </ion-icon>
        
-           <ion-label >Login</ion-label>
+           <ion-label ><b>Login</b></ion-label>
         </ion-item>
       </ion-menu-toggle>
 
