--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="favorite">
     <ion-title class="title">
-      Seeker
+     <b> Seeker</b>
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   
 <ion-card>
-  <ion-button class="title" type="submit"(click)="goToOpportunities()"  shape="round" style="color:white" expand="block"> Select Preferences</ion-button>
+  <ion-button class="title" type="submit"(click)="goToOpportunities()"  shape="round" style="color:white" expand="block"><b>Select Preferences</b> </ion-button>
 
 
 </ion-card>
