--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,8 +2,9 @@
 .title{
   font-family: cursive;
   font-size: larger;
-  color:white;
+  color:green;
   --background: #33cccc;
+  font-family: 'Courier New', Courier, monospace;
 
 
 }
