--- a/src/app/pages/addprofile/addprofile.page.html
+++ b/src/app/pages/addprofile/addprofile.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="profile"></ion-back-button>
     </ion-buttons>
-    <ion-title class="title"> <span style="color:#1f8611;"> Edit Profile</span></ion-title>
+    <ion-title class="title"> <span style="color:#1f8611;"><b>Edit Profile</b> </span></ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -158,7 +158,7 @@
             
          
         </ion-list>
-        <ion-button class="title" type="submit"  shape="block" style="color:white" expand="block">{{btnText}}</ion-button>
+        <ion-button class="title" type="submit"  shape="block" style="color:white" expand="block"><b>{{btnText}}</b></ion-button>
       </form> 
     </ion-card-content>
   </ion-card>  
