--- a/src/app/pages/alljobs/alljobs.page.html
+++ b/src/app/pages/alljobs/alljobs.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   
   <ion-toolbar color="favorite">    
-    <ion-title class="title"> All Jobs</ion-title>
+    <ion-title class="title"><b>All Jobs</b> </ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu">
       </ion-menu-button>
