--- a/src/app/pages/alljobs/alljobs.page.scss
+++ b/src/app/pages/alljobs/alljobs.page.scss
@@ -1,8 +1,9 @@
 
 .title{
     font-size: larger;
-    color:white;
+    color:green;
     --background: #33cccc;
+    font-family: 'Courier New', Courier, monospace;
 
 
 }
