--- a/src/app/pages/job/about/about.page.scss
+++ b/src/app/pages/job/about/about.page.scss
@@ -17,3 +17,7 @@
     color:#1f8611;
     border-left: 400px;
 }
+.card-title{
+    font-family: 'Courier New', Courier, monospace;
+  padding: 20px;
+}
