--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   
   <ion-toolbar color="favorite"> 
-    <ion-buttons slot="start">
+    <!-- <ion-buttons slot="start">
       <ion-back-button defaultHref="preferences"></ion-back-button>
-    </ion-buttons>   
-    <ion-title class="title"> Login</ion-title>    
+    </ion-buttons>    -->
+    <ion-title class="title"><b>Login</b></ion-title>    
   </ion-toolbar>
 </ion-header> 
 
@@ -39,7 +39,7 @@
             
           </ion-list>
           <small class="error">{{error}}</small>
-          <ion-button   class="title" type="submit"  shape="round" style="color:white" > {{ btnText }} </ion-button>
+          <ion-button   class="title" type="submit"  shape="round" style="color:white" > <b>{{ btnText }} </b></ion-button>
            
         </form>
         
