--- a/src/app/pages/opportunities/opportunities.page.html
+++ b/src/app/pages/opportunities/opportunities.page.html
@@ -2,7 +2,7 @@
   
   <ion-toolbar color="favorite">
     
-    <ion-title class="title"> Opportunities</ion-title>
+    <ion-title class="title"> <b>Opportunities</b></ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu">
       </ion-menu-button>
@@ -58,7 +58,7 @@
             <br>
             Email: {{ job.email }}
           </ion-card-content>
-          <ion-button class="title" type="submit"(click)="goToJob(job)"  shape="round" style="--background:green" style="color:white" expand="block"> View</ion-button>
+          <ion-button class="title" type="submit"(click)="goToJob(job)"  shape="round" style="--background:green" style="color:white" expand="block"> <b>View</b></ion-button>
         </ion-card>
         
         
