--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -2,7 +2,8 @@
     padding: 20px;
     margin-left: 30px;
     background: #ebfafa;
-   
+    font-family: 'Courier New', Courier, monospace;
+
 
 }
 // *{
@@ -12,6 +13,7 @@
     font-size: larger;
     color:#1f8611;
     --background: #33cccc;
+    font-family: 'Courier New', Courier, monospace;
 
 
 }
