--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .title{
-    font-family: cursive;
+    font-family: 'Courier New', Courier, monospace;
     font-size: larger;
     --background: green;
     color:#1f8611
