--- a/src/app/pages/job/editjob/editjob.page.scss
+++ b/src/app/pages/job/editjob/editjob.page.scss
@@ -1,3 +1,12 @@
 .word-color{
     color:green;
 }
+
+.title{
+    font-size: larger;
+    color:white;
+    --background: #33cccc;
+    font-family: 'Courier New', Courier, monospace;
+color: green;
+
+}
