--- a/src/app/pages/jobs/jobs.page.html
+++ b/src/app/pages/jobs/jobs.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   
   <ion-toolbar color="favorite">    
-    <ion-title class="title"> My Jobs</ion-title>
+    <ion-title class="title"><b> My Jobs</b></ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu">
       </ion-menu-button>
@@ -57,10 +57,9 @@
           Email: {{ job.email }}
         </ion-card-content>
         <div class="buttons">
-          <ion-button class="title" type="submit"(click)="goToJob(job)"  shape="round"  expand="block"  > View</ion-button>
-          <ion-button class="title" type="submit"(click)="goToJobEdit(job)"  shape="round"  expand="block"  > Edit</ion-button>
-  
-          <ion-button class="title" type="submit"  shape="block"  expand="round" (click)="removeJob(job.uid)"> Delete Job</ion-button>
+          <ion-button class="btn-title" type="submit"(click)="goToJob(job)"  shape="round"  expand="block"  ><b> View</b></ion-button>
+          <ion-button class="btn-title" type="submit"(click)="goToJobEdit(job)"  shape="round"  expand="block"  > <b>Edit</b></ion-button>  
+          <ion-button class="btn-title" type="submit"  shape="block"  expand="round" (click)="removeJob(job.uid)"><b> Delete Job</b></ion-button>
         </div>
         
         
