--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -7,15 +7,16 @@
 .title{
   font-family: cursive;
   font-size: larger;
-  color:white;
+  color:green;
   --background: #33cccc;
-
+  font-family: 'Courier New', Courier, monospace;
 
 }
 .footer{
   display: grid;
   grid-template-rows: 1 2;
   padding: 20px;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .form{
