--- a/src/app/pages/opportunities/opportunities.page.scss
+++ b/src/app/pages/opportunities/opportunities.page.scss
@@ -4,6 +4,7 @@
 // }
 .header{
   background-color: white;
+  font-family: 'Courier New', Courier, monospace;
 }
 .grid-container{
   display: grid;
@@ -14,23 +15,26 @@
   margin: 0 !important;
   background: white;
   background-color: white;
+
 }
 .card-content{
   background-color: white;
+  //font-family: Arial, Helvetica, sans-serif;
+
 }
 .title{
   font-size: larger;
-  // border-radius: 15%;
   --background: #33cccc;
   color:#1f8611;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .card-title {
   font-size: 10;  
   font-weight: bold;
   color: black;
-  // padding: 20px;
-  background-color: white;
+ // font-family: 'Courier New', Courier, monospace;
+    background-color: white;
 
 }
 .card-content{
@@ -39,11 +43,11 @@
     margin: 0 !important;
     background: white;
     width: 500px;
-
+   // font-family: 'Courier New', Courier, monospace;
 }
 .header{
   background-color: white;
-
+  font-family: 'Courier New', Courier, monospace;
 }
 
 
@@ -51,5 +55,5 @@
   font-size: 1.0em;  
   color: #33cccc;
   background-color: white;
-  
+  font-family: 'Courier New', Courier, monospace;
 }
