--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar color="favorite">
-    <ion-title class="title">Preferences</ion-title>
-    <ion-buttons slot="start">
+    <ion-title class="title"> <b>Preferences</b></ion-title>
+    <!-- <ion-buttons slot="start">
       <ion-menu-button menu="main-menu">
       </ion-menu-button>
-    </ion-buttons>
+    </ion-buttons> -->
     <ion-buttons (click)="goToLogin()" slot="end" *ngIf="user !== null">
       <ion-button >
         <ion-icon slot="icon-only" name="chevron-forward-circle-outline">Skip</ion-icon>
@@ -24,12 +24,12 @@
   <ion-list lines="none" *ngIf="user === null">
     <ion-item *ngFor="let profession of professions" >
       <ion-card class=small>
-      <ion-button class="title" type="submit"(click)="onSubmit(profession)"  shape="round" style="color:white" expand="block"> {{ profession }}</ion-button>
+      <ion-button class="title" type="submit"(click)="onSubmit(profession)"  shape="round" style="color:white" expand="block"> <b>{{ profession }}</b></ion-button>
     </ion-card>
 
     </ion-item>
     
-    <ion-button class="title" type="submit"(click)="goToOpportunities()"  shape="round" style="color:white" expand="block"> Submit</ion-button>
+    <ion-button class="title" type="submit"(click)="goToOpportunities()"  shape="round" style="color:white" expand="block"><b>Submit</b> </ion-button>
 
   
   </ion-list>
@@ -43,7 +43,7 @@
     <ion-item  >
       
       <ion-card class=small>
-        <ion-button class="title" type="submit"  shape="round" style="color:white" expand="block"> {{ prof }}</ion-button>
+        <ion-button class="title" type="submit"  shape="round" style="color:white" expand="block"><b>{{ prof }}</b> </ion-button>
       </ion-card>
 
     </ion-item>
