--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,11 +27,17 @@
         <ion-item routerLink="/jobs">
           <ion-icon  name="folder-open" slot="start">   </ion-icon>
        
-           <ion-label >Jobs</ion-label>
+           <ion-label >My Jobs</ion-label>
         </ion-item>
       </ion-menu-toggle>
 
-
+      <ion-menu-toggle>
+        <ion-item routerLink="/job/interest">
+          <ion-icon name="checkmark-circle-outline" slot="start">  </ion-icon>
+       
+           <ion-label >Applicants </ion-label>
+        </ion-item>
+      </ion-menu-toggle>
       <ion-menu-toggle>
         <ion-item routerLink="/addjob">
           <ion-icon  name="create" slot="start">   </ion-icon>
