--- a/src/app/pages/job/about/about.page.html
+++ b/src/app/pages/job/about/about.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="jobs"></ion-back-button>
     </ion-buttons>
-    <ion-title class="title"> <span style="color:#1f8611;"><b>My Job Detail</b> </span></ion-title>
+    <ion-title class="title-header"> <span style="color:#1f8611;"><b>My Job Detail</b> </span></ion-title>
 
   </ion-toolbar>
 </ion-header>
