--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -19,16 +19,16 @@
     <param name="onload" value="true"/>
   </feature>
 
+  <feature name="FileTransfer">
+    <param name="android-package" value="org.apache.cordova.filetransfer.FileTransfer"/>
+  </feature>
+
   <feature name="InAppBrowser">
     <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser"/>
   </feature>
 
   <feature name="Device">
     <param name="android-package" value="org.apache.cordova.device.Device"/>
-  </feature>
-
-  <feature name="EmailComposer">
-    <param name="android-package" value="de.martinreinhardt.cordova.plugins.email.EmailComposer"/>
   </feature>
 
   <feature name="StatusBar">
@@ -39,6 +39,14 @@
   <feature name="Whitelist">
     <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin"/>
     <param name="onload" value="true"/>
+  </feature>
+
+  <feature name="SocialSharing">
+    <param name="android-package" value="nl.xservices.plugins.SocialSharing"/>
+  </feature>
+
+  <feature name="CallNumber">
+    <param name="android-package" value="com.rohithvaranasi.callnumber.CFCallNumber"/>
   </feature>
 
   
