--- a/src/app/pages/alljobs/alljobs.page.scss
+++ b/src/app/pages/alljobs/alljobs.page.scss
@@ -7,6 +7,14 @@
 
 
 }
+.notification{
+  display: grid;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
+  color: red;
+  border: 2px solid red;
+}
 // *{
 //   background-color: #33cccc;
 // }
