--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -29,9 +29,11 @@
 
     </ion-item>
     
-    <ion-button class="title" type="submit"(click)="goToOpportunities()"  shape="round" style="color:white" expand="block"><b>Submit</b> </ion-button>
+    <ion-button class="title" type="submit"(click)="goToSignup()"  shape="round" style="color:white" expand="block"><b>Submit</b> </ion-button>
 
-  
+    <!-- <ion-card class=small>
+      <ion-button class="title" type="submit"  shape="round" style="color:white" expand="block"><b>{{ prof }}</b> </ion-button>
+    </ion-card> -->
   </ion-list>
 
 </ion-card>
@@ -101,13 +103,11 @@
         </ion-item>       
       
     <!-- </ion-list> -->
-    <!-- <ion-item  >
+    <!-- <ion-item  > -->
       
-      <ion-card class=small>
-        <ion-button class="title" type="submit"  shape="round" style="color:white" expand="block"><b>{{ prof }}</b> </ion-button>
-      </ion-card>
+      
 
-    </ion-item> -->
+    <!-- </ion-item> -->
     
   
   </ion-list>
