--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -13,11 +13,12 @@
     margin: 0 !important;
     background: white;
     background-color: white;
-  padding: 50px
+    padding: 20px;
+    width: 100%;
+
+
   }
-.list{
-  width: 100%;
-}
+
 .notification{
     display: grid;
     vertical-align: middle;
