--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   
   <ion-toolbar color="favorite">    
-    <ion-title class="title"> Seeker</ion-title>
+    <ion-title class="title"><b>Seeker</b> </ion-title>
     
   </ion-toolbar>
 </ion-header> 
@@ -46,13 +46,13 @@
   
       </ion-list>
       <small class="error">{{error}}</small>
-    <ion-button  type="submit"  class="title" shape="round" style="color:white" > {{ btnText }} </ion-button>
+    <ion-button  type="submit"  class="title" shape="round" style="color:white" > <b>{{ btnText }}</b> </ion-button>
   </ion-card>
 
   </form>    
 
 
-  <ion-button  type="submit"  class="title"  style="color:white" (click)="goToPreferences()"> Select Preferences before SignUp </ion-button>
+  <ion-button  type="submit"  class="sub-title"  style="color:white" (click)="goToPreferences()"> <b>Select Preferences before SignUp </b></ion-button>
 
 <!-- </ion-card> -->
 </ion-content>
