--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -29,7 +29,7 @@
 
     </ion-item>
     
-    <ion-button class="title" type="submit"(click)="goToSignup()"  shape="round" style="color:white" expand="block"><b>Submit</b> </ion-button>
+    <!-- <ion-button class="title" type="submit"(click)="goToSignup()"  shape="round" style="color:white" expand="block"><b>Submit</b> </ion-button> -->
 
     <!-- <ion-card class=small>
       <ion-button class="title" type="submit"  shape="round" style="color:white" expand="block"><b>{{ prof }}</b> </ion-button>
