--- a/src/app/pages/signup/signup.page.scss
+++ b/src/app/pages/signup/signup.page.scss
@@ -22,7 +22,7 @@ margin-left: 30px;
     font-size: small;
     color:white;
     --background: #33cccc;
-    margin-left: 40px;
+     margin-left: 10%;
 }
 .activeType{
     background: #fff !important;
