--- a/src/app/splash/splash.component.scss
+++ b/src/app/splash/splash.component.scss
@@ -5,8 +5,9 @@
     height: 100%;
     background-color: #33cccc;
     .splash-title{
+        margin-top: 50%;
         grid-row: 1;
-        font-family:Pacifico-Regular !important;
+        font-family: 'Courier New', Courier, monospace;
         font-size:4.1em;
         color:white;
     }
