--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -1,6 +1,6 @@
 <div class="splash-animation">
   <h1 class="splash-title">Seeker</h1>
   <div class="splash-img">
-    <img src="assets/icon/favicon.png" alt="" srcset="">
+    <img src="assets/icon/jobsearch.png" alt="" srcset="">
   </div>
 </div>
