--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar color="favorite">
     <ion-title class="title"> <b>Preferences</b></ion-title>
-    <!-- <ion-buttons slot="start">
+    <ion-buttons slot="start"*ngIf="user !== null">
       <ion-menu-button menu="main-menu">
       </ion-menu-button>
-    </ion-buttons> -->
+    </ion-buttons>
     <ion-buttons (click)="goToOpportunities()" slot="end" *ngIf="user !== null">
       <ion-button >
         <ion-icon slot="icon-only" name="chevron-forward-circle-outline">Skip</ion-icon>
